[gd_scene load_steps=3 format=3 uid="uid://yo0hr5l8yrdj"]

[ext_resource type="Script" path="res://scripts/turn_order_item.gd" id="1_ncoe2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qhkdm"]
content_margin_left = 2.0
content_margin_right = 2.0

[node name="TurnOrderItem" type="PanelContainer"]
script = ExtResource("1_ncoe2")

[node name="Button" type="Button" parent="."]
layout_mode = 2
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
expand_mode = 3
stretch_mode = 5

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "John"

[node name="InitiativeLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_qhkdm")
text = "10"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
